--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.8.24",
     "dotenv": "^8.2.0",
     "inquirer": "^7.1.0",
+    "node-fetch": "^2.6.1",
     "puppeteer-core": "^2.1.1",
     "tree-kill": "^1.2.2"
   }
